Fixed header alignment issues across pages.

--- a/global.css
+++ b/global.css
@@ -3,6 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&family=Noto+Sans+Glagolitic&display=swap");
 
+html {
+    background-color: #252527d9;
+}
 
 :root {
     /* main colors */
@@ -23,12 +26,12 @@
     /* basics */
     --white: #ffffff;
     --black: #000000;
-    --backgroundOne: #252527d9;
+    --backgroundOne: #5e5e62d9;
     --backgroundTwo: #18181a;
 
     /* font sizes */
     --tinyFont: 11px;
-    --smallFont: 15px;
+    --smallFont: 16px;
     --mediumFont: 21px;
     --bigFont: clamp(20px, 8vw, 38px);
     --hugeFont: clamp(40px, 8vw, 70px);
