--- a/pages/contact.css
+++ b/pages/contact.css
@@ -1,3 +1,18 @@
 /* Import the header styling into this file */
 @import url('/header/header.css');
 @import url('/global.css');
+
+
+body {
+    height: 100vh;
+    color: #ffffff;
+    overflow: hidden;
+    padding-left: 200px;
+    padding-right: 200px;
+    margin: 0;
+}
+
+main {
+    padding-top: 60px;
+    height: calc(100% - 60px);
+}
